# penrose

./: #README.txt#  .dockerignore  .eslintrc.js  .gitattributes  .gitignore  .hlint.yaml  .prettierignore  .prettierrc  .prettierrc.json  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  Dockerfile  Dockerfile.base  Dockerfile.circleci  Makefile  MathTODO.md  README.md  Sugarer.hs  USAGE.txt  UserGuide.md  cloudflare.sh  codecov.yml  constraint.hs  diagrams.sh  docker-compose-dev.yml  flake.nix  impl.md  lerna.json  nx.json  package-lock.json  package.json  partial  partial-float  penrose.cabal  (+11 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  bench.sh  gen_readme.js  readme.js  readme_template.hbs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: setup.yml
.github/workflows/: bench.yml  build.yml  delete-branches.yml  docs.yml  edgeworth.yml  lint-pr.yml  release.yml  storybook.yml  typedocs.yml
.travis/: attach-binary.sh  install-ghr.sh  install-stack.sh
automator/: README.md  index.ts  index.tsx  package-lock.json  package.json  state.json  tsconfig.json
automator/synthesized-progs/: venn-synth.sty
byhand/: group.tex
cli/: .eslintrc  README.md  package-lock.json  package.json
compiler/: compiler  compiler.hs  continuousmap1.sty
constraint-code/: constraint.hs
docker/: Dockerfile  Dockerfile-domains.dev  Dockerfile-penrose.dev  Dockerfile-renderer.dev  Dockerfile.dev  Dockerfile.local  README.md  entrypoint.sh
docs/: GC-180725.key  GC-180801.key  grammars.md  graphical-api.md  mathtransformer.md  user-guide.md
docs/GC-slides/: [Nimo]gc-170627.key  [Nimo]gc-170711.key  [Nimo]gc-170718.key  [Nimo]gc-170725.key  hmac-04-17-17.key  numeric-types-4-25-17.key  penrose_GC-2-28-17.key
docs/project-writeups/: nonconvex-constrained-opt.key
documentation/: system_diagram.key
examples/: ThoughtsAndIssues.txt  elementLibrary.json  enum-registry.json  figures-domain.json  figures-style.json  figures-substance.json  geometry-registry.json  registry.json  runErrors  runHyperbolic  runNormalTriangle  runTransformation  simple-mesh.sub  styleLibrary.json  substanceLibrary-new.json  substanceLibrary.json  vectors-registry.json
mem-bench/: README.md  leak-bench.mjs  package.json
old-constraint/: examples.hs
opt-config/: default.json  gd.json
optimization/: debug.txt  descent.hs  layout.hs  test  test-rank1  test-rank1.hs  test-rank2.hs  test-rankn.hs  test.hs
penrose/: Compiler.hs  README.md  Runtime.hs  continuousmap1.sty  twosets.sub
penrose-synthesizer/: README.md  USAGE.txt  default-settings.json  enumeration-example.sh  generateRegistry.py  set-theory-example.sh  spec.dsl  synthesizer.hs  venn-synth.sty
penrose-web/: .eslintrc.js  Makefile  README.md  index.d.ts  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  webpack.config.js
project-writeups/: system_diagram.key
react-renderer/: .dir-locals.el  .eslintrc.js  .gitignore  README.md  index.d.ts  jsconfig.json  package-lock.json  package.json  tsconfig.json  tsfmt.json  tslint.json
runtime/: test  test-rank2
scripts/: domain-server.sh  mkdoc.sh  test  test-poly.hs  test.hs  test2  test2.hs
src/: .stylish-haskell.yaml  AlloyPlugin.java  Ast.hs  Compiler.hi  Compiler.hs  Computation.hs  Dsll.hs  Element.hs  Env.hs  Evaluator.java  Functions-cart.hs  Functions.hi  Functions.hs  Functions1.hs  GenOptProblem.hs  Interface.hs  Main.hi  Main.hs  Makefile  Namegen.hs  NewFunctions.hs  NewStyle.hs  Optimizer.hs  Plugins.hs  README.md  Replace.hs  Runtime.hi  Runtime.hs  Serializer.hs  Server.hi  Server.hs  ShadowMain.hs  ShapeDef.hs  Shapes.hi  Shapes.hs  StyAst.hi  StyAst.hs  Style.hi  Style.hs  Substance.hi  (+41 more)
storybook/: 0.6ce068a2a75e26fc71ea.manager.bundle.js  0.a4e89d0ff90ee86eb6ad.manager.bundle.js  0.b7b21cd7c16e1336a21e.manager.bundle.js  0.e9d46ad83ccca2d9185a.manager.bundle.js  1.1e9cd08ce1522fab2c1b.manager.bundle.js  1.4aeeb3828282a6528192.manager.bundle.js  1.9a92c03a2870c29f17fb.manager.bundle.js  5.2c9f514b6aeffbe3dc3a.manager.bundle.js  5.3aa6a82ef3001587853f.manager.bundle.js  5.5d5ae90710ea513f9edc.manager.bundle.js  5.6cbfcb4241a048911390.manager.bundle.js  6.5334fbf776100c9e1780.manager.bundle.js  6.b31f6a050e4f9849e7fc.manager.bundle.js  6.df494576b323f7a9049d.manager.bundle.js  6.ea50d66ec65433931b2b.manager.bundle.js  7.6bd3998312f62e98351d.manager.bundle.js  7.796f21c63174edb22aba.manager.bundle.js  7.a9c2347e8122e89f3382.manager.bundle.js  7.b25ba71f93aa8d5bc6c2.manager.bundle.js  8.6013c64fb7ba1fa20a6f.manager.bundle.js  8.a8453f5ed0e676c38c25.manager.bundle.js  8.aceba03e12e05fe7b4c3.manager.bundle.js  8.de6da3c93e90812bdd4a.manager.bundle.js  9.083618d3d275f3c53e3a.manager.bundle.js  9.6ad7fcdafce2823021db.manager.bundle.js  9.76c73f16e3f2a1767a7e.manager.bundle.js  9.c4fcc7b103eef43a0d35.manager.bundle.js  iframe.html  index.html  index.json  main.19e7f8caa36e666a29bc.manager.bundle.js  main.4528e58a0a48d76563b7.manager.bundle.js  main.6ceb349c8e614317294d.manager.bundle.js  main.6ffd487226e50d5f41d9.manager.bundle.js  project.json  runtime~main.2cb9dc5271fb77e85e13.manager.bundle.js  runtime~main.7fce8a1c8b7f7f01ec92.manager.bundle.js  runtime~main.8be68d30876f03dcbc67.manager.bundle.js  runtime~main.aae98506ec718c6fdb22.manager.bundle.js  stories.json  (+5 more)
style-parse/: .gitignore  jest.config.ts  package-lock.json  package.json  readme.md  tsconfig.json
style-parser/: .gitignore  package-lock.json  package.json  readme.md  tsconfig.json
test/: TestSuite.hs  partial  partial-float  partial-float.hs  partial-no-record-no-hello.hs  partial-none.hs  partial-small-float  partial-small-float.hs  partial.hs
tsdef/: .gitignore  Main.hs  README.md  types.d.ts
tutorial/: exercise1-sol.md  exercise2-sol.md  penrose-ide.html  tutorial-intro.md  tutorial-p1.md  tutorial-p2.md  tutorial-p3.md  tutorial.md
typedoc/: index.html  modules.html
utils/: penrose.db  penroseDB.py  penrose_counter.py
web-optimizer/: composition.js  demo.js  index.html  optimizer.js  script.js
(+34433 files in other folders)
