cabal-version: >=1.10
name: penrose
version: 0.1.0.2
license: MIT
license-file: LICENSE
maintainer: kqy@cs.cmu.edu
author: team-penrose
homepage: http://penrose.ink
synopsis: A system that automatically visualizes mathematics
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.md
    test/TestSuite.hs

source-repository head
    type: git
    location: https://github.com/penrose/penrose.git

executable penrose
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        ShadowMain
        Utils
        Plugins
        Server
        Substance
        SubstanceJSON
        Dsll
        Env
        Style
        Optimizer
        GenOptProblem
        Shapes
        Functions
        SubstanceTokenizer
        Sugarer
        Tokenizer
    default-language: Haskell2010
    other-extensions: AllowAmbiguousTypes RankNTypes UnicodeSyntax
                      NoMonomorphismRestriction OverloadedStrings DeriveGeneric
                      DuplicateRecordFields
    build-depends:
        base -any,
        random -any,
        random-shuffle -any,
        containers -any,
        megaparsec -any,
        ad -any,
        aeson -any,
        text -any,
        websockets -any,
        old-time -any,
        pretty -any,
        pretty-show -any,
        extra -any,
        process -any,
        network -any,
        uuid -any,
        hslogger -any,
        split -any,
        multimap -any,
        directory -any,
        unordered-containers -any,
        pretty-terminal -any,
        scotty -any,
        http-types -any,
        mtl -any,
        bytestring -any,
        array -any,
        ansi-terminal -any,
        docopt -any

test-suite penrose-testsuite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    hs-source-dirs: src test
    other-modules:
        ShadowMain
        Utils
        Plugins
        Server
        Substance
        SubstanceJSON
        Dsll
        Env
        Style
        GenOptProblem
        Optimizer
        Functions
        Shapes
        SubstanceTokenizer
        Sugarer
        Tokenizer
        ShadowMain.Tests
        Server.Tests
        Substance.Tests
        Utils.Tests
        Functions.Tests
        Shapes.Tests
        Style.Tests
    default-language: Haskell2010
    build-depends:
        base -any,
        random -any,
        random-shuffle -any,
        containers -any,
        megaparsec -any,
        ad -any,
        aeson -any,
        text -any,
        websockets -any,
        old-time -any,
        pretty -any,
        extra -any,
        process -any,
        network -any,
        pretty-show -any,
        split -any,
        tasty -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        tasty-hunit -any,
        directory -any,
        multimap -any,
        pretty-terminal -any,
        scotty -any,
        http-types -any,
        mtl -any,
        bytestring -any,
        ansi-terminal -any,
        array -any,
        uuid -any,
        hslogger -any,
        docopt -any
