cabal-version: >=1.10
name: penrose
version: 0.1.1.0
license: MIT
license-file: LICENSE
maintainer: penrose.team@gmail.com
author: team-penrose
homepage: http://penrose.ink
synopsis: Create beautiful diagrams just by typing mathematical notation in plain text.
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.md
    test/TestSuite.hs

source-repository head
    type: git
    location: https://github.com/penrose/penrose.git

library
    build-tools: alex
    build-depends:
            base -any,
            containers -any,
            random -any,
            random-shuffle -any,
            containers -any,
            megaparsec -any,
            ad -any,
            aeson -any,
            text -any,
            websockets -any,
            old-time -any,
            pretty -any,
            pretty-show -any,
            extra -any,
            process -any,
            network -any,
            uuid -any,
            hslogger -any,
            split -any,
            multimap -any,
            directory -any,
            unordered-containers -any,
            pretty-terminal -any,
            scotty -any,
            http-types -any,
            mtl -any,
            bytestring -any,
            array -any,
            ansi-terminal -any,
            docopt -any,
            parser-combinators -any,
            hmatrix -any
    default-language: Haskell2010
    hs-source-dirs:  src
    -- other-modules:
    exposed-modules:
            Penrose.Util
            Penrose.Plugins
            Penrose.Server
            Penrose.Substance
            Penrose.SubstanceJSON
            Penrose.Element
            Penrose.Env
            Penrose.Style
            Penrose.Optimizer
            Penrose.GenOptProblem
            Penrose.Shapes
            Penrose.Functions
            Penrose.Transforms
            Penrose.SubstanceTokenizer
            Penrose.Sugarer
            Penrose.Interface
            Penrose.Tokenizer
            Penrose.Serializer
            Penrose.ShadowMain
    autogen-modules: Penrose.SubstanceTokenizer 
    buildable:       True

executable penrose
    main-is: Main.hs
    hs-source-dirs: .
    other-modules:
    default-language: Haskell2010
    build-depends:
        penrose,
        base -any

test-suite penrose-testsuite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    hs-source-dirs: src test
    other-modules:
        ShadowMain
        Util
        Plugins
        Server
        Substance
        Interface
        Serializer
        SubstanceJSON
        Element
        Env
        Style
        GenOptProblem
        Optimizer
        Functions
        Transforms
        Shapes
        SubstanceTokenizer
        Sugarer
        Tokenizer
        ShadowMain.Tests
        Server.Tests
        -- Substance.Tests
        -- Style.Tests
        Util.Tests
        Functions.Tests
        Shapes.Tests
        Transforms.Tests
    default-language: Haskell2010
    build-depends:
        base >=4.9 && <4.10,
        random >=1.1 && <1.2,
        random-shuffle >=0.0.4 && <0.1,
        containers >=0.5 && <0.6,
        megaparsec >=6.4 && <6.5,
        ad >=4.3 && <4.4,
        aeson >=1.2 && <1.3,
        text >=1.2 && <1.3,
        websockets >=0.11 && <0.12,
        old-time >=1.1 && <1.2,
        pretty >=1.1.3 && <1.2,
        extra >=1.6 && <1.7,
        process >=1.4.3 && <1.5,
        network >=2.6.3 && <2.7,
        pretty-show -any,
        split -any,
        tasty -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        tasty-hunit -any,
        directory -any,
        multimap -any,
        pretty-terminal -any,
        scotty -any,
        http-types -any,
        mtl -any,
        bytestring -any,
        ansi-terminal -any,
        array -any,
        uuid -any,
        hslogger -any,
        docopt -any,
        parser-combinators -any,
        hmatrix -any
