cabal-version: >=1.10
name: penrose
version: 0.1.1.1
license: MIT
license-file: LICENSE
maintainer: penrose.team@gmail.com
author: team-penrose
homepage: http://penrose.ink
synopsis: Create beautiful diagrams just by typing mathematical notation in plain text.
build-type: Simple
extra-source-files:
    ChangeLog.md
    README.md
    test/TestSuite.hs

source-repository head
    type: git
    location: https://github.com/penrose/penrose.git

library
    build-tools: alex
    build-depends:
            base >= 4.12 && < 5,
            containers -any,
            random -any,
            random-shuffle -any,
            containers -any,
            megaparsec -any,
            ad -any,
            aeson -any,
            text -any,
            websockets -any,
            old-time -any,
            pretty -any,
            pretty-show -any,
            extra -any,
            process -any,
            network -any,
            uuid -any,
            hslogger -any,
            split -any,
            multimap -any,
            directory -any,
            unordered-containers -any,
            pretty-terminal -any,
            scotty -any,
            http-types -any,
            mtl -any,
            bytestring -any,
            array -any,
            ansi-terminal -any,
            parser-combinators -any,
            docopt -any,
            hmatrix -any
    default-language: Haskell2010
    hs-source-dirs:  src
    other-modules: Paths_penrose
    exposed-modules:
            Penrose.Util
            Penrose.Plugins
            Penrose.Server
            Penrose.Substance
            Penrose.SubstanceJSON
            Penrose.Element
            Penrose.Env
            Penrose.Style
            Penrose.Optimizer
            Penrose.GenOptProblem
            Penrose.Shapes
            Penrose.Functions
            Penrose.Transforms
            Penrose.SubstanceTokenizer
            Penrose.Sugarer
            Penrose.API
            Penrose.Tokenizer
            Penrose.Serializer
            Penrose.ShadowMain
    autogen-modules: Penrose.SubstanceTokenizer, Paths_penrose
    buildable:       True

executable penrose
    main-is: penrose.hs
    hs-source-dirs: .
    other-modules:
    default-language: Haskell2010
    build-depends:
        penrose,
        base -any

test-suite penrose-testsuite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    hs-source-dirs: src test
    other-modules:
        Penrose.ShadowMain
        Penrose.Util
        Penrose.Plugins
        Penrose.Server
        Paths_penrose
        Penrose.Substance
        Penrose.API
        Penrose.Serializer
        Penrose.SubstanceJSON
        Penrose.Element
        Penrose.Env
        Penrose.Style
        Penrose.GenOptProblem
        Penrose.Optimizer
        Penrose.Functions
        Penrose.Transforms
        Penrose.Shapes
        Penrose.SubstanceTokenizer
        Penrose.Sugarer
        Penrose.Tokenizer
        ShadowMain.Tests
        Server.Tests
        -- Substance.Tests
        -- Style.Tests
        Util.Tests
        Functions.Tests
        Shapes.Tests
        Transforms.Tests
    default-language: Haskell2010
    build-depends:
        base -any,
        random -any,
        random-shuffle -any,
        containers -any,
        megaparsec -any,
        ad -any,
        aeson -any,
        text -any,
        websockets -any,
        old-time -any,
        pretty -any,
        extra -any,
        process -any,
        network -any,
        pretty-show -any,
        split -any,
        tasty -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        tasty-hunit -any,
        directory -any,
        multimap -any,
        pretty-terminal -any,
        scotty -any,
        http-types -any,
        mtl -any,
        bytestring -any,
        ansi-terminal -any,
        array -any,
        uuid -any,
        hslogger -any,
        docopt -any,
        parser-combinators -any,
        hmatrix -any
